--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
 					<div class="section-heading">
 						<h2>About <strong>Me</strong></h2>
 					</div>
-					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-
+					<p class="lead">I'm Andres Felipe, a Python developer and Data Analyst in process and constant learning.</p>
+					<p class="mb-5  ">At the end of 2020, after a serious self-reflection about my passions and interests produced by the COVI-19 lock-in, I committed myself to learn everything I could about the world of data and development with Python. I want, with data science, to find patterns that no one else sees, answer questions, and generate knowledge.</p>
+					<p class="mb-5  ">I currently work, based on my experience, as an IT Engineer for Perficient Latin America, but I am looking to collaborate in positions related to Data Analyst, Business Intelligence and Python developer.</p>
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
 						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
