Changing Contact section

--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
 						<h2>About <strong>Me</strong></h2>
 					</div>
 					<p class="lead">I'm Andres Felipe, a Python developer and Data Analyst in process and constant learning.</p>
-					<p class="mb-5  ">At the end of 2020, after a serious self-reflection about my passions and interests produced by the COVI-19 lock-in, I committed myself to learn everything I could about the world of data and development with Python. I want, with data science, to find patterns that no one else sees, answer questions, and generate knowledge.</p>
+					<p class="mb-5  ">At the end of 2020, after a serious self-reflection about my passions and interests produced by the COVID-19 lock-in, I committed myself to learn everything I could about the world of data and development with Python. I want, with data science, to find patterns that no one else sees, answer questions, and generate knowledge.</p>
 					<p class="mb-5  ">I currently work, based on my experience, as an IT Engineer for Perficient Latin America, but I am looking to collaborate in positions related to Data Analyst, Business Intelligence and Python developer.</p>
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+						<a href="https://drive.google.com/file/d/13-ZYStE9ED-NkFE-A3tuiooE5cU8CR1-/view?usp=sharing" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
 					</p>
 				</div>
 			</div>
@@ -499,7 +499,7 @@
 						<h2>Get <strong>In Touch</strong></h2>
 					</div>
 				</div>
-
+				<!-- .section 
 				<div class="col-md-7 mb-5 mb-md-0">
 					<form action="" class="site-form">
 						<h3 class="mb-5">Get In Touch</h3>
@@ -520,26 +520,22 @@
 						</div>
 					</form>
 				</div>
+				-->
 				<div class="col-md-5 pl-md-5">
 					<h3 class="mb-5">My Contact Details</h3>
 					<ul class="site-contact-details">
 						<li>
 							<span class="text-uppercase">Email</span>
-							site@gmail.com
+							felipe.barrero17@gmail.com
 						</li>
 						<li>
 							<span class="text-uppercase">Phone</span>
-							+30 976 1382 9921
-						</li>
-						<li>
-							<span class="text-uppercase">Fax</span>
-							+30 976 1382 9922
+							+57 300 472 6164
 						</li>
 						<li>
 							<span class="text-uppercase">Address</span>
-							San Francisco, CA <br>
-							4th Floor8 Lower  <br>
-							San Francisco street, M1 50F
+							Bogotá <br>
+							Colombia  <br>
 						</li>
 					</ul>
 				</div>
@@ -562,11 +558,11 @@
 			<div class="row mb-5">
 				<div class="col-md-12 text-center">
 					<p>
-						<a href="#" class="social-item"><span class="icon-facebook2"></span></a>
-						<a href="#" class="social-item"><span class="icon-twitter"></span></a>
-						<a href="#" class="social-item"><span class="icon-instagram2"></span></a>
-						<a href="#" class="social-item"><span class="icon-linkedin2"></span></a>
-						<a href="#" class="social-item"><span class="icon-vimeo"></span></a>
+						<a href="https://github.com/Barrero0717" class="social-item"><span class="icon-github2"></span></a>
+						<!-- .section <a href="#" class="social-item"><span class="icon-twitter"></span></a>-->
+						<!-- .section <a href="#" class="social-item"><span class="icon-instagram2"></span></a>-->
+						<!-- .section <a href="#" class="social-item"><span class="icon-linkedin2"></span></a>-->
+						<!-- .section <a href="#" class="social-item"><span class="icon-vimeo"></span></a>-->
 					</p>
 				</div>
 			</div>
