Adding LinkedIn icon

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 					</form>
 				</div>
 				-->
-				<div class="col-md-5 pl-md-5">
+				<div class="col-md-12 mb-5">
 					<h3 class="mb-5">My Contact Details</h3>
 					<ul class="site-contact-details">
 						<li>
@@ -534,8 +534,11 @@
 						</li>
 						<li>
 							<span class="text-uppercase">Address</span>
-							Bogotá <br>
-							Colombia  <br>
+							Bogotá, Colombia
+						</li>
+						<li>
+							<span class="text-uppercase">Any Questions?</span>
+							My inbox is always open. Whether you have a question or just want to say hello, I'll try my best to get back to you! Feel free to mail me about any relevant job updates.
 						</li>
 					</ul>
 				</div>
@@ -559,7 +562,7 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<a href="https://github.com/Barrero0717" class="social-item"><span class="icon-github2"></span></a>
-						<!-- .section <a href="#" class="social-item"><span class="icon-twitter"></span></a>-->
+						<a href="www.linkedin.com/in/andres-felipe-barrero" class="social-item"><span class="icon-linkedin2"></span></a>
 						<!-- .section <a href="#" class="social-item"><span class="icon-instagram2"></span></a>-->
 						<!-- .section <a href="#" class="social-item"><span class="icon-linkedin2"></span></a>-->
 						<!-- .section <a href="#" class="social-item"><span class="icon-vimeo"></span></a>-->
