Adding LinkedIn icon Part 2

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 					</form>
 				</div>
 				-->
-				<div class="col-md-12 mb-5">
+				<div class="col-md-5 pl-md-5 text-center">
 					<h3 class="mb-5">My Contact Details</h3>
 					<ul class="site-contact-details">
 						<li>
@@ -562,7 +562,7 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<a href="https://github.com/Barrero0717" class="social-item"><span class="icon-github2"></span></a>
-						<a href="www.linkedin.com/in/andres-felipe-barrero" class="social-item"><span class="icon-linkedin2"></span></a>
+						<a href="https://linkedin.com/in/andres-felipe-barrero" class="social-item"><span class="icon-linkedin2"></span></a>
 						<!-- .section <a href="#" class="social-item"><span class="icon-instagram2"></span></a>-->
 						<!-- .section <a href="#" class="social-item"><span class="icon-linkedin2"></span></a>-->
 						<!-- .section <a href="#" class="social-item"><span class="icon-vimeo"></span></a>-->
