--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p1.jpg" alt="">
+								<img class="image img-fluid" src="images/Detect.png" alt="">
 							</div>
-							<a href="images/p1.jpg" class="img-pop-up">  
+							<a href="images/Detect.png" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -104,9 +104,9 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p2.jpg" alt="">
+								<img class="image img-fluid" src="images/Interactive_Map.png" alt="">
 							</div>
-							<a href="images/p2.jpg" class="img-pop-up">  
+							<a href="images/Interactive_Map.png" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -115,7 +115,8 @@
 						<div class="p-inner">
 							<h4>Interactive Map</h4>
 							<div class="cat">
-								<a href="https://github.com/Barrero0717/Interactive_Map">URL Git</a>
+								<a href="https://github.com/Barrero0717/Interactive_Map">URL Github - </a>
+								<a href="https://barrero0717.pythonanywhere.com/">URL Page Project</a>
 							</div>
 						</div>                                         
 					</div>                            
@@ -123,9 +124,9 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p3.jpg" alt="">
+								<img class="image img-fluid" src="images/Password.png" alt="">
 							</div>
-							<a href="images/p3.jpg" class="img-pop-up">  
+							<a href="images/Password.png" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -143,9 +144,9 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p4.jpg" alt="">
+								<img class="image img-fluid" src="images/Book.png" alt="">
 							</div>
-							<a href="images/p4.jpg" class="img-pop-up">  
+							<a href="images/Book.png" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -162,9 +163,9 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p5.jpg" alt="">
+								<img class="image img-fluid" src="images/Book.png" alt="">
 							</div>
-							<a href="images/p5.jpg" class="img-pop-up">  
+							<a href="images/Book.png" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -493,7 +494,7 @@
 	
 	<section class="site-section" id="section-contact">
 		<div class="container">
-			<div class="row">
+
 				<div class="col-md-12 mb-5">
 					<div class="section-heading text-center">
 						<h2>Get <strong>In Touch</strong></h2>
@@ -521,7 +522,7 @@
 					</form>
 				</div>
 				-->
-				<div class="col-md-5 pl-md-5 text-center">
+				<div class="text-center">
 					<h3 class="mb-5">My Contact Details</h3>
 					<ul class="site-contact-details">
 						<li>
@@ -542,7 +543,7 @@
 						</li>
 					</ul>
 				</div>
-			</div>
+
 		</div>
 	</section>
 
