--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 			<div class="row mb-4">
 				<div class="col-md-12">
 					<div class="section-heading text-center">
-						<h2>My <strong>Services</strong></h2>
+						<h2>Some Courses <strong>and Certifications</strong></h2>
 					</div>
 				</div>
 			</div>
@@ -396,36 +396,33 @@
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
 						<span class="icon">
-							<span class="icon-browser2"></span>
+							<span class="icon-stats-bars"></span>
 						</span>
-						<h3 class="mb-4">Web Design</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
+						<h3 class="mb-4">Datacademy</h3>
+						<p>Platzi</p>
+						<p><a href="https://platzi.com/p/barrero0717/curso/2681-datacademy/diploma/detalle/" class="site-link">See credential <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
 						<span class="icon">
-							<span class="icon-presentation"></span>
+							<span class="icon-database2"></span>
 						</span>
-						<h3 class="mb-4">Search Engine Optimization</h3>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
+						<h3 class="mb-4">The Complete SQL Bootcamp 2022: Go from Zero to Hero</h3>
+						<p>Udemy</p>
+						<p><a href="https://ude.my/UC-9b2a3018-b6fa-4aa1-8d72-c81543e644d7/" class="site-link">See credential <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
 						<span class="icon">
-							<span class="icon-video2"></span>
+							<span class="icon-loop22"></span>
 						</span>
-						<h3 class="mb-4">Video Editing</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
+						<h3 class="mb-4">Scrum Fundamentals Certified</h3>
+						<p>VMEdu Inc.</p>
+						<p><a href="http://81cd1176253f3f59d435-ac22991740ab4ff17e21daf2ed577041.r77.cf1.rackcdn.com/Certificates/ScrumFundamentalsCertified-AndresFelipeBarreroArce-695433.pdf" class="site-link">See credential <i class="icon-chevron-right"></i></a></p>
 					</div>
-				</div>
-
-				
-
+				</div>	
 			</div>
 		</div>
 	</section>
