Adding new project

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<div class="p-inner">
 							<h4>Detecting Objects</h4>
 							<div class="cat">							
-								<a href="https://github.com/Barrero0717/Detecting_Objects">URL Git</a>
+								<a href="https://github.com/Barrero0717/Detecting_Objects">Github URL</a>
 							</div>
 						</div>                                         
 					</div>
@@ -115,8 +115,8 @@
 						<div class="p-inner">
 							<h4>Interactive Map</h4>
 							<div class="cat">
-								<a href="https://github.com/Barrero0717/Interactive_Map">URL Github - </a>
-								<a href="https://barrero0717.pythonanywhere.com/">URL Page Project</a>
+								<a href="https://github.com/Barrero0717/Interactive_Map">Github URL - </a>
+								<a href="https://barrero0717.pythonanywhere.com/">Project URL</a>
 							</div>
 						</div>                                         
 					</div>                            
@@ -136,7 +136,7 @@
 						<div class="p-inner">
 							<h4>Password Generator</h4>
 							<div class="cat">
-								<a href="https://github.com/Barrero0717/PasswordGenerator">URL Git</a>
+								<a href="https://github.com/Barrero0717/PasswordGenerator">Github URL</a>
 							</div>
 						</div>
 					</div>
@@ -155,7 +155,7 @@
 						<div class="p-inner">
 							<h4>Book Inventory</h4>
 							<div class="cat">
-								<a href="https://github.com/Barrero0717/Book_Inventory">URL Git</a>	
+								<a href="https://github.com/Barrero0717/Book_Inventory">Github URL</a>	
 							</div>
 						</div>
 					</div>
@@ -174,7 +174,7 @@
 						<div class="p-inner">
 							<h4>Book Inventory OOP Model</h4>
 							<div class="cat">
-								<a href="https://github.com/Barrero0717/OOP_Book_Inventory">URL Git</a>	
+								<a href="https://github.com/Barrero0717/OOP_Book_Inventory">Github URL</a>	
 							</div>
 						</div>
 					</div>
@@ -182,18 +182,18 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p6.jpg" alt="">
+								<img class="image img-fluid" src="images/Retailers.png" alt="">
 							</div>
-							<a href="images/p6.jpg" class="img-pop-up">  
+							<a href="images/Retailers.png" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
 							</a>                                
 						</div>
 						<div class="p-inner">
-							<h4>Vaccinated Dashboard</h4>
+							<h4>U.S. Retailers Analysis (In Spanish)</h4>
 							<div class="cat">
-								<a href="https://github.com/Barrero0717/VaccinatedDashboard">URL Git</a>
+								<a href="https://deepnote.com/workspace/andres-felipe-barrero-arce-ad4fa2c3-4d67-4cef-989e-2876a4bb51a7/project/Proyecto-Datacademy-9d15dc6e-2f4c-4d1b-8310-6e95ec701ac1/%2Fproyecto_datacademy.ipynb">Deepnote URL</a>
 							</div>
 						</div>
 					</div>
