--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="col-md-10 text-center pt-5">
 
 					<h1 class="site-heading site-animate">Hello World! <strong class="d-block"> I'm Andres Felipe Barrero</strong></h1>
-					<strong class="d-block text-white text-uppercase letter-spacing">A Python Developer and Data Analyst in process</strong>
+					<strong class="d-block text-white text-uppercase letter-spacing">Data Analyst - Business Analyst - Data Scientist</strong>
 
 				</div>
 			</div>
@@ -219,21 +219,21 @@
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> March 2021 - Present</span>
 						<h3>IT Engineer</h3>
-						<p>Topics: </p>
+						<p>Managed incidents and remote IT support requests for users around the world, especially in the US, resolving problems quickly and implementing the necessary security solutions.</p>
 						<span class="school">Perficient Latin America</span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> August 2019 - March 2021</span>
 						<h3>Support Analyst</h3>
-						<p>Analysis, monitoring and solution of first level support cases. Administration and management of the company's knowledge base and the case management platform (Jira Service Desk)</p>
+						<p>Analysis, monitoring and solution of first level support cases. Administration and management of the company's knowledge base and the case management platform (Jira Service Desk).</p>
 						<span class="school">Minka Inc.</span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> April 2018 - September 2018</span>
 						<h3>Service Desk Operator</h3>
-						<p>Solution of incidents and requirements of internal clients, in terms of hardware and software problems (access to applications from the G-Suite, request from network users, validation of databases in SQL, among others)</p>
+						<p>Solution of incidents and requirements of internal clients, in terms of hardware and software problems (access to applications from the G-Suite, request from network users, validation of databases in SQL, among others).</p>
 						<span class="school">Almundo</span>
 					</div>
 
@@ -302,7 +302,7 @@
 					<p class="mb-5  ">I currently work, based on my experience, as an IT Engineer for Perficient Latin America, but I am looking to collaborate in positions related to Data Analyst, Business Intelligence and Python developer.</p>
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="https://drive.google.com/file/d/1SxKnYctXL_1nQbLLWHegS8ZM4RfzJaZq/view?usp=sharing" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+						<a href="https://drive.google.com/file/d/1PsEelJpa_YLMEYpPQThupmBiMeXZvzgJ/view?usp=sharing" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
 					</p>
 				</div>	
 			</div>
